--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
 <header>
     <div class="logo">
       <!-- Make the logo a link to main.html -->
-      <a href="main.html">
+      <a href="index.html">
         <img src="ammglo png.png" alt="Logo">
       </a>
     </div>
