--- a/services.html
+++ b/services.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -8,19 +9,19 @@
 </head>
 <body>
 
-    <header>
-        <div class="logo">
-          <!-- Make the logo a link to main.html -->
-          <a href="main.html">
-            <img src="ammglo png.png" alt="Logo">
-          </a>
-        </div>
-        <nav class="nav-links">
-          <a href="services.html">Services</a>
-          <a href="about.html">About Us</a>
-          <a href="contact.html">Contact Us</a>
-        </nav>
-      </header>
+<header>
+  <div class="logo">
+    <!-- Make the logo a link to index.html -->
+    <a href="index.html">
+      <img src="ammglo png.png" alt="Logo">
+    </a>
+  </div>
+  <nav class="nav-links">
+    <a href="index.html">Home</a>
+    <a href="about.html">About Us</a>
+    <a href="contact.html">Contact Us</a>
+  </nav>
+</header>
 
 
 <div class="container" id="content">
