--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
   </form>
 </div>
 <div class="services-text">
-  <p>Dry Van / Open Top \ Refrigerated</p>
+  <p>Dry Van / Flatbed\ Hot Shot /Refrigerated</p>
 </div>
 <script src="script.js"></script>
 
