--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <header>
   <div class="logo">
     <!-- Make the logo a link to index.html -->
-    <a href="index.html">
+    <a href="./index">
       <img src="ammglo png.png" alt="Logo">
     </a>
   </div>
