--- a/main.html
+++ b/main.html
@@ -28,7 +28,8 @@
     <div class="container page-content">
       <div class="video-background">
         <div class="video-overlay"></div>
-        <video autoplay muted loop="opacity: 0.09;">
+        <!-- Fixed the loop attribute issue -->
+        <video autoplay muted loop>
           <source src="trucking company.mp4" type="video/mp4">
           Your browser does not support the video tag.
         </video>
@@ -58,14 +59,16 @@
     </div>
     <div class="form-group">
       <label for="additionalInfo">Additional Information:</label>
-      <textarea id="additionalInfo" name="additionalInfo" placeholder="Enter additional request information "></textarea>
+      <textarea id="additionalInfo" name="additionalInfo" placeholder="Enter additional request information"></textarea>
     </div>
     <button type="submit">Submit</button>
   </form>
 </div>
+
 <div class="services-text">
   <p>Dry Van / Open Top \ Refrigerated</p>
 </div>
+
 <script src="script.js"></script>
 
 </body>
