--- a/about.html
+++ b/about.html
@@ -10,7 +10,6 @@
 
 <header>
     <div class="logo">
-      <!-- Make the logo a link to main.html -->
       <a href="index.html">
         <img src="ammglo png.png" alt="Logo">
       </a>
@@ -26,7 +25,7 @@
   <!-- About Us Page Content -->
   <div class="page" id="about">
     <div class="container page-content">
-      <div class="text-container"> <!-- New container for both h2 and p -->
+      <div class="text-container">
         <div class="additional-text">
           <div class="first-two">
             <p>At Amm Glo Logistic Co, we're a family-owned and operated freight brokerage committed to personalized service and reliability.</p>
@@ -35,9 +34,6 @@
           <div class="third">
             <p>Experience the difference of a family-owned company—trustworthy, passionate, and dedicated. Let's navigate your logistics journey millions of miles together!</p>
           </div>
-        </div>
-        <!-- Gold box for founder's picture -->
-        <div class="founder-box">
         </div>
       </div>
     </div>
