--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
 <div class="quote-form">
   <h2>Get a Quote</h2>
-   <form action="https://formsubmit.co/tiruxu" method="POST" >
+   <form action="https://formsubmit.co/el/tiruxu" method="POST" >
     <div class="form-group">
       <label for="fullName">Full Name:</label>
       <input type="text" id="fullName" name="fullName" placeholder="Enter your full name" required>
