--- a/main.html
+++ b/main.html
@@ -44,25 +44,11 @@
 
 <div class="quote-form">
   <h2>Get a Quote</h2>
-  <form action="https://formsubmit.co/tiruxu" method="POST" >
-    <div class="form-group">
-      <label for="fullName">Full Name:</label>
-      <input type="text" id="fullName" name="fullName" placeholder="Enter your full name" required>
-    </div>
-    <div class="form-group">
-      <label for="companyName">Company Name:</label>
-      <input type="text" name="name" name="companyName" placeholder="Enter your company name" required>
-    </div>
-    <div class="form-group">
-      <label for="email">Email:</label>
-      <input type="email" name="email"  placeholder="Enter your email address" required>
-    </div>
-    <div class="form-group">
-      <label for="additionalInfo">Additional Information:</label>
-      <textarea id="additionalInfo" name="additionalInfo" placeholder="Enter additional request information"></textarea>
-    </div>
+ <form action="https://formsubmit.co/el/tiruxu" method="POST" >
+     <input type="text" name="name" placeholder="Company name"required>
+    <input type="text" name="additionalInfo" placeholder="Enter additional request information" required>
+    <input type="email" name="email" placeholder="Email" required>
     <button type="submit">Send</button>
-  </form>
 </div>
 
 <div class="services-text">
