--- a/main.html
+++ b/main.html
@@ -52,7 +52,7 @@
 </div>
 
 <div class="services-text">
-  <p>Dry Van / Open Top \ Refrigerated</p>
+  <p>Dry Van / Open Top \ Refrigerated/ Intermodal</p>
 </div>
 
 <script src="script.js"></script>
