--- a/services.html
+++ b/services.html
@@ -28,7 +28,7 @@
   <!-- Services Page Content -->
   <div class="page" id="services">
     <div class="services-text">
-   <p>Dry Van / Flatbed\ Hot Shot /Refrigerated</p>
+   <p>Dry Van / Open Top \ Refrigerated/ Intermodal</p>
     </div>
     <div class="container page-content">
     
